--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="card">
-<img src="../sakura.jpg"  alt="Foto de Perfil" class="profile-pic">
+<img src="sakura.jpg"  alt="Foto de Perfil" class="profile-pic">
 <h2 class="name">kauan</h2>
 <p class="job-title">aluno</p>
 <p class="description">meu nome e kauan! tenho 17 anos e sou estudante ainda.</p>
